# thesis-meshExtraction

./: CMakeLists.txt  GettingMeshes.vcxproj  MRSurface.cpp  MRSurface.h  MRimage.cpp  MRimage.h  Source.cpp  auxiliarFunctions_Meshes.cpp  auxiliarHeaders.cpp  auxiliarHeaders.h  changeSegmentation.cpp  changeSegmentation.h  cleaningMesh.cpp  cleaningMesh.h  mammogram.cpp  mammogram.h  mesh.cpp  mesh.h  tetgen.cxx  tetgen.h
